k8s/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: streamlit-service
spec:
  type: NodePort
  selector:
    app: streamlit
  ports:
    - port: 8501
      targetPort: 8501
      nodePort: 30001
